apps/archiveteam-warrior/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
  labels:
    app: warrior
spec:
  selector:
    matchLabels:
      app: warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: warrior
    spec:
      containers:
        - image: atdr.meo.ws/archiveteam/warrior-dockerfile:latest
          name: warrior
          ports:
            - containerPort: 8001
