apps/archiveteam-warrior/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warrior
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.6
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: warrior
